refactor: gen-swagger
