# api/docs/swagger.json
@@ -57,7 +57,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/github_com_blackhorseya_ethscan_cmd_restful_block_api_v1_blocks.listResponse"
+                                            "$ref": "#/definitions/cmd_restful_block_api_v1_blocks.listResponse"
                                         }
                                     }
                                 }
@@ -149,19 +149,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/response.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/model.Transaction"
-                                        }
-                                    }
-                                }
-                            ]
+                            "$ref": "#/definitions/response.Response"
                         }
                     },
                     "500": {
@@ -239,7 +227,7 @@
                     "description": "@gotags: json:\"transactions,omitempty\"",
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "$ref": "#/definitions/pkg_entity_domain_block_model.Transaction"
                     }
                 }
             }
@@ -259,7 +247,7 @@
                 "BlockStatus_BLOCK_STATUS_REORG"
             ]
         },
-        "model.Event": {
+        "pkg_entity_domain_block_model.Event": {
             "type": "object",
             "properties": {
                 "data": {
@@ -270,7 +258,7 @@
                 }
             }
         },
-        "model.Transaction": {
+        "pkg_entity_domain_block_model.Transaction": {
             "type": "object",
             "properties": {
                 "block_hash": {
@@ -286,7 +274,7 @@
                     "description": "@gotags: json:\"logs,omitempty\"",
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/model.Event"
+                        "$ref": "#/definitions/pkg_entity_domain_block_model.Event"
                     }
                 },
                 "nonce": {
